AllFiles/Mod03/LabFiles/Solution/Exercise 2/productreviews-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productreviews-deployment
spec:
  replicas: 1
  selector:
     matchLabels:
       app: productreviews
  template:
    metadata:
      labels:
        app: productreviews
    spec:
      containers:
      - name: productreviews-api
        image: productreviews
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: productsreviews-lb
spec:
  type: LoadBalancer
  selector:
    app: productreviews
  ports:
  - name: http
    port: 8888
    targetPort: 80
