AllFiles/Mod03/LabFiles/Solution/Exercise 2/sqlserver-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-deployment
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 4444
      targetPort: 1433
  type: LoadBalancer
